--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,8 +7,10 @@ html
     link(rel='stylesheet', media ='screen', href='/css/animate.css')
     link(rel='stylesheet', media ='screen', href='bootstrap/css/bootstrap.min.css')
     link(rel='stylesheet', media ='screen', href='/css/simple-line-icons.css')
-    link(rel='stylesheet', media ='screen', href='/css/font-awesome.min.css')
-    link(rel='stylesheet', media ='screen', href='/css/bootstrap-image-gallery.min.css')
+    link(rel='stylesheet', media ='screen', href='/css/font-awesome.min.css')  
+    link(rel="stylesheet", href="css/blueimp-gallery.min.css")
+    link(rel="stylesheet", href="css/bootstrap-image-gallery.min.css")
+    
     // Javascript files   
     script(src='/js/modernizr.custom.js')  
     script(src='/js/jquery-1.11.1.min.js')
@@ -22,7 +24,8 @@ html
     script(src='/js/waypoints.min.js')
     script(src='/js/jquery.cbpQTRotator.js')
     script(src='/js/custom.js')
-    script(src='/js/bootstrap-image-gallery.min.js')  
+    script(src="/js/jquery.blueimp-gallery.min.js")
+    script(src="/js/bootstrap-image-gallery.min.js") 
 
   body
     block content
