--- a/views/youthcouncil2015.jade
+++ b/views/youthcouncil2015.jade
@@ -1,5 +1,65 @@
 extends layout
   
 block content
-	h1 bye
-block footer
+
+  // Preloader
+  div#preloader
+    div#status
+
+  // Home start
+  section#homeyouthcouncil2015.pfblock-image.screen-height
+    .home-overlay
+    .intro
+      .start= t('home.start')
+      a(href='#training2015')= t('home.achievement')
+      .start= t('home.startDescription')
+    a(href='#training2015')
+      .scroll-down
+        span
+          i.fa.fa-angle-down.fa-2x
+  // Home end
+
+  // Navigation start
+  header.header
+    nav.navbar.navbar-custom(role="navigation")
+      .container
+        .navbar-header
+          button.navbar-toggle(type="button", data-toggle="collapse", data-target="#custom-collapse")
+            span.sr-only Toggle navigation
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
+          a.navbar-brand(href="/")= t('home.start')
+        #custom-collapse.collapse.navbar-collapse
+          ul.nav.navbar-nav.navbar-right
+            li
+              a(href="#home")= t('nav.home')
+            li
+              a(href="#youthcouncil2015")= t('nav.youthcouncil2015') 
+            li
+              a(href="#youthcouncil2013")= t('nav.youthcouncil2013') 
+            li
+              a(href="#teams")= t('nav.teams') 
+            li
+              a(href="#partners")= t('nav.partners') 
+            li
+              a(href="#contact")= t('nav.contact') 
+            li
+              a.aFlag.dropdown-toggle(type='button', data-toggle='dropdown')
+                span.fa.fa-flag
+                span= t('nav.languages')
+                span.caret
+              ul.dropdown-menu(role='menu')
+                li
+                  a(href='?setLng=ar')= t('nav.arabe') 
+                li.divider
+                li
+                  a(href='?setLng=en')= t('nav.english') 
+                li.divider
+                li
+                  a(href='?setLng=fr')= t('nav.french') 
+                li.divider
+                li
+                  a(href='?setLng=dev')= t('nav.test') 
+    // .container
+  // Navigation end
