--- a/views/youthcouncil2013.jade
+++ b/views/youthcouncil2013.jade
@@ -654,9 +654,9 @@ block content
       .row
         .col-sm-6.col-sm-offset-3
           .pfblock-header.wow.fadeInUp
-            h2.pfblock-title= t('youthcouncil2013.studyTrip')
+            h2.pfblock-title= t('youthcouncil2013.artCompetition')
             .pfblock-line
-            .pfblock-subtitle= t('youthcouncil2013.figCaptionDescription2')
+            .pfblock-subtitle= t('youthcouncil2013.figCaptionDescription3')
       // The Gallery as lightbox dialog, should be a child element of the document body
       .container
         #artCompetition
@@ -741,7 +741,7 @@ block content
       .row
         .col-md-12.col-lg-12
           h2.wow.slideInRight(data-wow-delay=".1s")= t('youthcouncil2013.guideBook') 
-          .calltoaction-decription.wow.slideInRight(data-wow-delay=".2s")= t('youthcouncil2015.download')
+          .calltoaction-decription.wow.slideInRight(data-wow-delay=".2s")= t('youthcouncil2013.guideBookDescription')
         .col-md-12.col-lg-12.calltoaction-btn.wow.slideInRight(data-wow-delay=".3s")
           a.btn.btn-lg(href="/guidebook")= t('youthcouncil2015.download')
       // .row
