--- a/views/index.jade
+++ b/views/index.jade
@@ -134,7 +134,7 @@ block content
             figure.effect-bubba
               img(src="/img/item-1.jpg",height="250", width="360",alt="img01")
               figcaption                
-                a(href='/youthcouncil2013')
+                a(href='/youthcouncil2013#trainingWorkshop2013')
                 h2= t('youthcouncil2013.figCaptionTitle11')
                   span= t('youthcouncil2013.figCaptionTitle12') 
                 p= t('youthcouncil2013.figCaptionDescription1')
@@ -143,7 +143,7 @@ block content
             figure.effect-bubba
               img(src="/img/item-2.jpg",height="250", width="360",alt="img01")
               figcaption
-                a(href='/youthcouncil2013')
+                a(href='/youthcouncil2013#miniprojects2013')
                 h2= t('youthcouncil2013.figCaptionTitle21')
                   span= t('youthcouncil2013.figCaptionTitle22')
                 p= t('youthcouncil2013.figCaptionDescription2')
@@ -152,7 +152,7 @@ block content
             figure.effect-bubba
               img(src="/img/item-3.jpg",height="250", width="360",alt="img01")
               figcaption
-                a(href='/youthcouncil2013')
+                a(href='/youthcouncil2013#artCompetition')
                 h2= t('youthcouncil2013.figCaptionTitle31')
                   span= t('youthcouncil2013.figCaptionTitle32')
                 p= t('youthcouncil2013.figCaptionDescription3')
@@ -161,7 +161,7 @@ block content
             figure.effect-bubba
               img(src="/img/item-4.jpg",height="250", width="360",alt="img01")
               figcaption
-                a(href='/youthcouncil2013')
+                a(href='/youthcouncil2013#studyTrip2013')
                 h2= t('youthcouncil2013.figCaptionTitle41')
                   span= t('youthcouncil2013.figCaptionTitle42')
                 p= t('youthcouncil2013.figCaptionDescription4')
@@ -170,7 +170,7 @@ block content
             figure.effect-bubba
               img(src="/img/item-5.jpg",height="250", width="360",alt="img01")
               figcaption
-                a(href='/youthcouncil2013')
+                a(href='/youthcouncil2013#newspaper')
                 h2= t('youthcouncil2013.figCaptionTitle51')
                   span= t('youthcouncil2013.figCaptionTitle52')
                 p= t('youthcouncil2013.figCaptionDescription5')
