--- a/views/youthcouncil2013.jade
+++ b/views/youthcouncil2013.jade
@@ -7,7 +7,7 @@ block content
     div#status
 
   // Home start
-  section#homeyouthcouncil2013.pfblock-image.screen-height
+  section#youthcouncil2013.pfblock-image.screen-height
     .home-overlay
     .intro
       .start= t('home.start2013')
@@ -33,17 +33,17 @@ block content
         #custom-collapse.collapse.navbar-collapse
           ul.nav.navbar-nav.navbar-right
             li
-              a(href="#home")= t('nav.home')
+              a(href="/")= t('nav.home')
             li
-              a(href="#trainingWorkshop2013")= t('nav.youthcouncil2015') 
+              a(href="/youthcouncil2015")= t('nav.youthcouncil2015') 
             li
-              a(href="#miniprojects")= t('nav.youthcouncil2013') 
+              a(href="/youthcouncil2013")= t('nav.youthcouncil2013') 
             li
-              a(href="#teams")= t('nav.teams') 
+              a(href="/#teams")= t('nav.teams') 
             li
-              a(href="#partners")= t('nav.partners') 
+              a(href="/#partners")= t('nav.partners') 
             li
-              a(href="#contact")= t('nav.contact') 
+              a(href="/#contact")= t('nav.contact') 
             li
               a.aFlag.dropdown-toggle(type='button', data-toggle='dropdown')
                 span.fa.fa-flag
@@ -102,7 +102,7 @@ block content
                     | Next
                     i.fa.fa-arrow-right
      
-        #trainingPictures
+        #linkstrainingPictures
           a(href="img/training2013/1.jpg", title="Training & workshop 2013", data-gallery="")
             img(src="img/training2013/1.jpg", alt="1" , height="100", width="120")
 
@@ -241,7 +241,7 @@ block content
             .pfblock-subtitle= t('youthcouncil2013.figCaptionDescription2')
       // The Gallery as lightbox dialog, should be a child element of the document body
       .container
-        #miniProjectHS
+        #linksminiProjectHS
           a(href="img/HammamSousse/1.jpg", title="Hammam Sousse mini project 2013", data-gallery="")
             img(src="img/HammamSousse/1.jpg", alt="1" , height="100", width="120")
 
@@ -320,7 +320,7 @@ block content
             .pfblock-subtitle= t('youthcouncil2013.figCaptionDescription2')
       // The Gallery as lightbox dialog, should be a child element of the document body
       .container
-        #miniProjectKK
+        #linksminiProjectKK
           a(href="img/KalaaKebira2013/1.jpg", title="Kalaa Kebira mini project 2013", data-gallery="")
             img(src="img/KalaaKebira2013/1.jpg", alt="1" , height="100", width="120")
 
@@ -421,7 +421,7 @@ block content
             .pfblock-subtitle= t('youthcouncil2013.figCaptionDescription2')
       // The Gallery as lightbox dialog, should be a child element of the document body
       .container
-        #miniProjectM
+        #linksminiProjectM
           a(href="img/Monastir2013/1.jpg", title="Monastir mini project 2013", data-gallery="")
             img(src="img/Monastir2013/1.jpg", alt="1" , height="100", width="120")
 
@@ -571,7 +571,7 @@ block content
             .pfblock-subtitle= t('youthcouncil2013.figCaptionDescription2')
       // The Gallery as lightbox dialog, should be a child element of the document body
       .container
-        #studyTrip2013
+        #linksstudyTrip2013
           a(href="img/studyTrip2013/1.jpg", title="Study trip 2013", data-gallery="")
             img(src="img/studyTrip2013/1.jpg", alt="1" , height="100", width="120")
 
@@ -659,7 +659,7 @@ block content
             .pfblock-subtitle= t('youthcouncil2013.figCaptionDescription3')
       // The Gallery as lightbox dialog, should be a child element of the document body
       .container
-        #artCompetition
+        #linksartCompetition
           a(href="img/artCompetition/1.jpg", title="Art competition", data-gallery="")
             img(src="img/artCompetition/1.jpg", alt="1" , height="100", width="120")
 
