Add pictures for the training 2015, design youthcouncil2015, fix facebook link

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -39,10 +39,10 @@ html
           .col-sm-12
             ul.social-links
               li
-                a.wow.fadeInUp(href="index.html")
+                a.wow.fadeInUp(href="/facebookpage", target="_blank")
                   i.fa.fa-facebook
               li
-                a.wow.fadeInUp(href="index.html")
+                a.wow.fadeInUp(href="/#contact")
                   i.fa.fa-envelope
             p.copyright
             | &#169; 2015 Youth council Tunisia
