--- a/views/youthcouncil2015.jade
+++ b/views/youthcouncil2015.jade
@@ -37,7 +37,7 @@ block content
             li
               a(href="#youthcouncil2015")= t('nav.youthcouncil2015') 
             li
-              a(href="#youthcouncil2013")= t('nav.youthcouncil2013') 
+              a(href="#youthcouncil2015")= t('nav.youthcouncil2015') 
             li
               a(href="#teams")= t('nav.teams') 
             li
@@ -63,3 +63,179 @@ block content
                   a(href='?setLng=dev')= t('nav.test') 
     // .container
   // Navigation end
+
+  // training & workshop 2015 starts: description + gallery
+  section#trainingWorkshop2015.pfblock
+    .container
+      .row
+        .col-sm-6.col-sm-offset-3
+          .pfblock-header.wow.fadeInUp
+            h2.pfblock-title= t('youthcouncil2013.training2013')
+            .pfblock-line
+            .pfblock-subtitle= t('youthcouncil2013.figCaptionDescription1')
+      // The Gallery as lightbox dialog, should be a child element of the document body
+      .container
+        // The Bootstrap Image Gallery lightbox, should be a child element of the document body
+        #blueimp-gallery.blueimp-gallery.blueimp-gallery-controls
+          // The container for the modal slides
+          .slides
+          // Controls for the borderless lightbox
+          h3.title
+          a.prev &#8249;
+          a.next &#8250;
+          a.close &#215;
+          a.play-pause
+          ol.indicator
+          // The modal dialog, which will be used to wrap the lightbox content
+          .modal.fade
+            .modal-dialog
+              .modal-content
+                .modal-header
+                  button.close(type="button", aria-hidden="true") &#215;
+                  h4.modal-title
+                .modal-body.next
+                .modal-footer
+                  button.btn.btn-primary.pull-left.prev(type="button")
+                    i.fa.fa-arrow-left
+                    | Previous
+                  button.btn.btn-primary.next(type="button")
+                    | Next
+                    i.fa.fa-arrow-right
+     
+        #linkstrainingPictures
+          a(href="img/training2015/1.png", title="Training & workshop 2015", data-gallery="")
+            img(src="img/training2015/1.png", alt="1" , height="100", width="120")
+
+          a(href="img/training2015/2.png", title="Training & workshop 2015", data-gallery="")
+            img(src="img/training2015/2.png", alt="2", height="100", width="120")
+
+          a(href="img/training2015/3.png", title="Training & workshop 2015", data-gallery="")
+            img(src="img/training2015/3.png", alt="3" , height="100", width="120")
+
+          a(href="img/training2015/4.png", title="Training & workshop 2015", data-gallery="")
+            img(src="img/training2015/4.png", alt="4" , height="100", width="120")
+
+          a(href="img/training2015/5.png", title="Training & workshop 2015", data-gallery="")
+            img(src="img/training2015/5.png", alt="5" , height="100", width="120")
+
+          a(href="img/training2015/6.png", title="Training & workshop 2015", data-gallery="")
+            img(src="img/training2015/6.png", alt="6" , height="100", width="120")
+
+          a(href="img/training2015/7.png", title="Training & workshop 2015", data-gallery="")
+            img(src="img/training2015/7.png", alt="7" , height="100", width="120")
+
+          a(href="img/training2015/8.png", title="Training & workshop 2015", data-gallery="")
+            img(src="img/training2015/8.png", alt="8" , height="100", width="120")
+
+          a(href="img/training2015/9.png", title="Training & workshop 2015", data-gallery="")
+            img(src="img/training2015/9.png", alt="9" , height="100", width="120")
+
+          a(href="img/training2015/10.png", title="Training & workshop 2015", data-gallery="")
+            img(src="img/training2015/10.png", alt="10" , height="100", width="120")
+
+          a(href="img/training2015/11.png", title="Training & workshop 2015", data-gallery="")
+            img(src="img/training2015/11.png", alt="11" , height="100", width="120")
+
+          a(href="img/training2015/12.png", title="Training & workshop 2015", data-gallery="")
+            img(src="img/training2015/12.png", alt="12" , height="100", width="120")  
+
+          a(href="img/training2015/13.png", title="Training & workshop 2015", data-gallery="")
+            img(src="img/training2015/13.png", alt="13" , height="100", width="120")  
+
+          a(href="img/training2015/14.png", title="Training & workshop 2015", data-gallery="")
+            img(src="img/training2015/14.png", alt="14" , height="100", width="120")  
+
+          a(href="img/training2015/15.png", title="Training & workshop 2015", data-gallery="")
+            img(src="img/training2015/15.png", alt="15" , height="100", width="120")  
+
+          a(href="img/training2015/16.png", title="Training & workshop 2015", data-gallery="")
+            img(src="img/training2015/16.png", alt="16" , height="100", width="120") 
+
+          a(href="img/training2015/17.png", title="Training & workshop 2015", data-gallery="")
+            img(src="img/training2015/17.png", alt="17" , height="100", width="120") 
+
+          a(href="img/training2015/18.png", title="Training & workshop 2015", data-gallery="")
+            img(src="img/training2015/18.png", alt="18" , height="100", width="120") 
+
+          a(href="img/training2015/19.png",title="Training & workshop 2015", data-gallery="")
+            img(src="img/training2015/19.png", alt="19" , height="100", width="120")
+
+          a(href="img/training2015/20.png",title="Training & workshop 2015", data-gallery="")
+            img(src="img/training2015/20.png", alt="20" , height="100", width="120")
+
+          a(href="img/training2015/21.png",title="Training & workshop 2015", data-gallery="")
+            img(src="img/training2015/21.png", alt="21" , height="100", width="120")
+
+          a(href="img/training2015/22.png",title="Training & workshop 2015", data-gallery="")
+            img(src="img/training2015/22.png", alt="22" , height="100", width="120")
+
+          a(href="img/training2015/23.png",title="Training & workshop 2015", data-gallery="")
+            img(src="img/training2015/23.png", alt="23" , height="100", width="120") 
+
+          a(href="img/training2015/24.png",title="Training & workshop 2015", data-gallery="")
+            img(src="img/training2015/24.png", alt="24" , height="100", width="120") 
+
+          a(href="img/training2015/25.png",title="Training & workshop 2015", data-gallery="")
+            img(src="img/training2015/25.png", alt="25" , height="100", width="120") 
+
+          a(href="img/training2015/26.png",title="Training & workshop 2015", data-gallery="")
+            img(src="img/training2015/26.png", alt="26" , height="100", width="120") 
+
+          a(href="img/training2015/27.png",title="Training & workshop 2015", data-gallery="")
+            img(src="img/training2015/27.png", alt="27" , height="100", width="120") 
+
+          a(href="img/training2015/28.png",title="Training & workshop 2015", data-gallery="")
+            img(src="img/training2015/28.png", alt="28" , height="100", width="120") 
+
+          a(href="img/training2015/29.png",title="Training & workshop 2015", data-gallery="")
+            img(src="img/training2015/29.png", alt="29" , height="100", width="120") 
+
+          a(href="img/training2015/30.png",title="Training & workshop 2015", data-gallery="")
+            img(src="img/training2015/30.png", alt="30" , height="100", width="120") 
+
+          a(href="img/training2015/31.png",title="Training & workshop 2015", data-gallery="")
+            img(src="img/training2015/31.png", alt="31" , height="100", width="120") 
+
+          a(href="img/training2015/32.png",title="Training & workshop 2015", data-gallery="")
+            img(src="img/training2015/32.png", alt="32" , height="100", width="120") 
+
+          a(href="img/training2015/33.png",title="Training & workshop 2015", data-gallery="")
+            img(src="img/training2015/33.png", alt="33" , height="100", width="120") 
+
+          a(href="img/training2015/34.png",title="Training & workshop 2015", data-gallery="")
+            img(src="img/training2015/34.png", alt="34" , height="100", width="120") 
+
+          a(href="img/training2015/35.png",title="Training & workshop 2015", data-gallery="")
+            img(src="img/training2015/35.png", alt="35" , height="100", width="120") 
+
+          a(href="img/training2015/36.png",title="Training & workshop 2015", data-gallery="")
+            img(src="img/training2015/36.png", alt="36" , height="100", width="120")     
+
+          a(href="img/training2015/37.png",title="Training & workshop 2015", data-gallery="")
+            img(src="img/training2015/37.png", alt="37" , height="100", width="120") 
+
+          a(href="img/training2015/38.png",title="Training & workshop 2015", data-gallery="")
+            img(src="img/training2015/38.png", alt="38" , height="100", width="120") 
+
+          a(href="img/training2015/39.png",title="Training & workshop 2015", data-gallery="")
+            img(src="img/training2015/39.png", alt="39" , height="100", width="120") 
+
+          a(href="img/training2015/40.png",title="Training & workshop 2015", data-gallery="")
+            img(src="img/training2015/40.png", alt="40" , height="100", width="120") 
+
+          a(href="img/training2015/41.png",title="Training & workshop 2015", data-gallery="")
+            img(src="img/training2015/41.png", alt="41" , height="100", width="120") 
+
+          a(href="img/training2015/42.png",title="Training & workshop 2015", data-gallery="")
+            img(src="img/training2015/42.png", alt="42" , height="100", width="120") 
+
+          a(href="img/training2015/43.png",title="Training & workshop 2015", data-gallery="")
+            img(src="img/training2015/43.png", alt="43" , height="100", width="120") 
+
+          a(href="img/training2015/44.png",title="Training & workshop 2015", data-gallery="")
+            img(src="img/training2015/44.png", alt="44" , height="100", width="120") 
+
+          a(href="img/training2015/45.png",title="Training & workshop 2015", data-gallery="")
+            img(src="img/training2015/45.png", alt="45" , height="100", width="120")   
+    // .contaier
+  // training & workshop 2015 ends: description + gallery
