--- a/views/youthcouncil2013.jade
+++ b/views/youthcouncil2013.jade
@@ -65,7 +65,7 @@ block content
   // Navigation end
 
   // training & workshop 2013 starts: description + gallery
-  section#trainingWorkshop2013.pfblock
+  section#training.pfblock
     .container
       .row
         .col-sm-6.col-sm-offset-3
@@ -231,7 +231,7 @@ block content
   // ==========================================================================
   // Hammam Sousse
   // ==========================================================================
-  section#miniprojects2013.pfblock
+  section#miniprojects.pfblock
     .container
       .row
         .col-sm-6.col-sm-offset-3
@@ -310,7 +310,7 @@ block content
   // ==========================================================================
   // Kalaa Kebira
   // ==========================================================================
-  section#miniprojects2013.pfblock
+  section#miniprojects.pfblock
     .container
       .row
         .col-sm-6.col-sm-offset-3
@@ -411,7 +411,7 @@ block content
   // ==========================================================================
   // Monastir
   // ==========================================================================
-  section#miniprojects2013.pfblock
+  section#miniprojects.pfblock
     .container
       .row
         .col-sm-6.col-sm-offset-3
@@ -561,7 +561,7 @@ block content
   // ==========================================================================
   // Study trip 2013
   // ==========================================================================
-  section#studyTrip2013.pfblock
+  section#studyTrip.pfblock
     .container
       .row
         .col-sm-6.col-sm-offset-3
