--- a/views/youthcouncil2015.jade
+++ b/views/youthcouncil2015.jade
@@ -11,9 +11,9 @@ block content
     .home-overlay
     .intro
       .start= t('home.start')
-      a(href='#training2015')= t('home.achievement')
+      a(href='#training')= t('home.achievement')
       .start= t('home.startDescription')
-    a(href='#training2015')
+    a(href='#training')
       .scroll-down
         span
           i.fa.fa-angle-down.fa-2x
@@ -33,17 +33,17 @@ block content
         #custom-collapse.collapse.navbar-collapse
           ul.nav.navbar-nav.navbar-right
             li
-              a(href="#home")= t('nav.home')
+              a(href="/")= t('nav.home')
             li
-              a(href="#youthcouncil2015")= t('nav.youthcouncil2015') 
+              a(href="/youthcouncil2015")= t('nav.youthcouncil2015') 
             li
-              a(href="#youthcouncil2015")= t('nav.youthcouncil2015') 
+              a(href="/youthcouncil2013")= t('nav.youthcouncil2015') 
             li
-              a(href="#teams")= t('nav.teams') 
+              a(href="/#teams")= t('nav.teams') 
             li
-              a(href="#partners")= t('nav.partners') 
+              a(href="/#partners")= t('nav.partners') 
             li
-              a(href="#contact")= t('nav.contact') 
+              a(href="/#contact")= t('nav.contact') 
             li
               a.aFlag.dropdown-toggle(type='button', data-toggle='dropdown')
                 span.fa.fa-flag
@@ -65,7 +65,7 @@ block content
   // Navigation end
 
   // training & workshop 2015 starts: description + gallery
-  section#trainingWorkshop2015.pfblock
+  section#training.pfblock
     .container
       .row
         .col-sm-6.col-sm-offset-3
