Add description for mini projects 2015

--- a/views/index.jade
+++ b/views/index.jade
@@ -96,7 +96,7 @@ block content
             .iconbox-text
               h3.iconbox-title= t('youthcouncil2015.iconboxTitle2') 
               .iconbox-desc= t('youthcouncil2015.iconboxDesc3')
-              a.ajoinus(href='/youthcouncil2015')= t('youthcouncil2015.readMore')
+              a.ajoinus(href='/youthcouncil2015#projects')= t('youthcouncil2015.readMore')
         .col-sm-3
           .iconbox.wow.slideInRight
             .iconbox-icon
