--- a/views/layout.jade
+++ b/views/layout.jade
@@ -39,7 +39,7 @@ html
           .col-sm-12
             ul.social-links
               li
-                a.wow.fadeInUp(href="/facebookpage", target="_blank")
+                a.wow.fadeInUp(href="https://www.facebook.com/youthcounciltunisia", target="_blank")
                   i.fa.fa-facebook
               li
                 a.wow.fadeInUp(href="/#contact")
