--- a/views/youthcouncil2015.jade
+++ b/views/youthcouncil2015.jade
@@ -70,9 +70,9 @@ block content
       .row
         .col-sm-6.col-sm-offset-3
           .pfblock-header.wow.fadeInUp
-            h2.pfblock-title= t('youthcouncil2013.training2013')
+            h2.pfblock-title= t('youthcouncil2015.training2015')
             .pfblock-line
-            .pfblock-subtitle= t('youthcouncil2013.figCaptionDescription1')
+            .pfblock-subtitle= t('youthcouncil2015.trainingDescription')
       // The Gallery as lightbox dialog, should be a child element of the document body
       .container
         // The Bootstrap Image Gallery lightbox, should be a child element of the document body
@@ -240,13 +240,69 @@ block content
     // .contaier
   // training & workshop 2015 ends: description + gallery
 
+  // ==========================================================================
+  // ERRIADH
+  // ==========================================================================
+  section#projects.pfblock
+    .container
+      .row
+        .col-sm-6.col-sm-offset-3
+          .pfblock-header.wow.fadeInUp
+            h2.pfblock-title= t('team.textCenter1')
+            .pfblock-line
+            .pfblock-subtitle= t('youthcouncil2015.projectErriadh')
+    // .contaier
+  // miniProjectHS 2013 ends: description + gallery
+
+  //- // ==========================================================================
+  //- // Hammam Sousse
+  //- // ==========================================================================
+  //- section#projects.pfblock
+  //-   .container
+  //-     .row
+  //-       .col-sm-6.col-sm-offset-3
+  //-         .pfblock-header.wow.fadeInUp
+  //-           h2.pfblock-title= t('team.textCenter2')
+  //-           .pfblock-line
+  //-           .pfblock-subtitle= t('youthcouncil2013.figCaptionDescription2')
+  //-   // .contaier
+  //- // miniProjectHS 2013 ends: description + gallery
+
+  // ==========================================================================
+  // Kalaa Kebira
+  // ==========================================================================
+  section#projects.pfblock
+    .container
+      .row
+        .col-sm-6.col-sm-offset-3
+          .pfblock-header.wow.fadeInUp
+            h2.pfblock-title= t('team.textCenter3')
+            .pfblock-line
+            .pfblock-subtitle= t('youthcouncil2015.projectKK')
+    // .contaier
+  // miniProjectKK 2013 ends: description + gallery
+
+  //- // ==========================================================================
+  //- // Monastir
+  //- // ==========================================================================
+  //- section#projects.pfblock
+  //-   .container
+  //-     .row
+  //-       .col-sm-6.col-sm-offset-3
+  //-         .pfblock-header.wow.fadeInUp
+  //-           h2.pfblock-title= t('team.textCenter5')
+  //-           .pfblock-line
+  //-           .pfblock-subtitle= t('youthcouncil2013.figCaptionDescription2')
+  //-   // .contaier
+  //- // miniProjectM 2013 ends: description + gallery            
+
   // Erriadh team: description
   section#erriadh.pfblock
     .container
       .row
         .col-sm-6.col-sm-offset-3
           .pfblock-header.wow.fadeInUp
-            h2.pfblock-title= t('team.textCenter1')
+            h2.pfblock-title= t('team.erriadhYC')
             .pfblock-line
             .pfblock-subtitle= t('team.erriadhDescription')
             .media
@@ -262,7 +318,7 @@ block content
       .row
         .col-sm-6.col-sm-offset-3
           .pfblock-header.wow.fadeInUp
-            h2.pfblock-title= t('team.textCenter2')
+            h2.pfblock-title= t('team.hsYC')
             .pfblock-line
             .pfblock-subtitle= t('team.hsDescription')
             .media
@@ -278,7 +334,7 @@ block content
       .row
         .col-sm-6.col-sm-offset-3
           .pfblock-header.wow.fadeInUp
-            h2.pfblock-title= t('team.textCenter3')
+            h2.pfblock-title= t('team.kkYC')
             .pfblock-line
             .pfblock-subtitle= t('team.kkDescription')
             .media
@@ -294,7 +350,7 @@ block content
       .row
         .col-sm-6.col-sm-offset-3
           .pfblock-header.wow.fadeInUp
-            h2.pfblock-title= t('team.textCenter4')
+            h2.pfblock-title= t('team.kmYC')
             .pfblock-line
             .pfblock-subtitle= t('team.kmDescription')
             .media
@@ -310,7 +366,7 @@ block content
       .row
         .col-sm-6.col-sm-offset-3
           .pfblock-header.wow.fadeInUp
-            h2.pfblock-title= t('team.textCenter5')
+            h2.pfblock-title= t('team.monastirYC')
             .pfblock-line
             .pfblock-subtitle= t('team.monastirDescritpion')
             .media
@@ -326,7 +382,7 @@ block content
       .row
         .col-sm-6.col-sm-offset-3
           .pfblock-header.wow.fadeInUp
-            h2.pfblock-title= t('team.textCenter6')
+            h2.pfblock-title= t('team.msakenYC')
             .pfblock-line
             .pfblock-subtitle= t('team.msakenDescription')
             .media
@@ -342,7 +398,7 @@ block content
       .row
         .col-sm-6.col-sm-offset-3
           .pfblock-header.wow.fadeInUp
-            h2.pfblock-title= t('team.textCenter7')
+            h2.pfblock-title= t('team.sousseYC')
             .pfblock-line
             .pfblock-subtitle= t('team.sousseDescription')
             .media
