Add pictures of mini projects of msaken

--- a/views/youthcouncil2013.jade
+++ b/views/youthcouncil2013.jade
@@ -557,6 +557,70 @@ block content
     // .contaier
   // miniProjectM 2013 ends: description + gallery
 
+  // ==========================================================================
+  // M'saken
+  // ==========================================================================
+  section#miniprojects.pfblock
+    .container
+      .row
+        .col-sm-6.col-sm-offset-3
+          .pfblock-header.wow.fadeInUp
+            h2.pfblock-title= t('team.textCenter6')
+            .pfblock-line
+            .pfblock-subtitle= t('youthcouncil2013.figCaptionDescription2')
+      // The Gallery as lightbox dialog, should be a child element of the document body
+      .container
+        #linksminiProjectM
+          a(href="img/msaken2013/1.jpg", title="M'saken mini project 2013", data-gallery="")
+            img(src="img/msaken2013/1.jpg", alt="1" , height="100", width="120")
+
+          a(href="img/msaken2013/2.jpg", title="M'saken mini project 2013", data-gallery="")
+            img(src="img/msaken2013/2.jpg", alt="2", height="100", width="120")
+
+          a(href="img/msaken2013/3.jpg", title="M'saken mini project 2013", data-gallery="")
+            img(src="img/msaken2013/3.jpg", alt="3" , height="100", width="120")
+
+          a(href="img/msaken2013/4.jpg", title="M'saken mini project 2013", data-gallery="")
+            img(src="img/msaken2013/4.jpg", alt="4" , height="100", width="120")
+
+          a(href="img/msaken2013/5.jpg", title="M'saken mini project 2013", data-gallery="")
+            img(src="img/msaken2013/5.jpg", alt="5" , height="100", width="120")
+
+          a(href="img/msaken2013/6.jpg", title="M'saken mini project 2013", data-gallery="")
+            img(src="img/msaken2013/6.jpg", alt="6" , height="100", width="120")
+
+          a(href="img/msaken2013/7.jpg", title="M'saken mini project 2013", data-gallery="")
+            img(src="img/msaken2013/7.jpg", alt="7" , height="100", width="120")
+
+          a(href="img/msaken2013/8.jpg", title="M'saken mini project 2013", data-gallery="")
+            img(src="img/msaken2013/8.jpg", alt="8" , height="100", width="120")
+
+          a(href="img/msaken2013/9.jpg", title="M'saken mini project 2013", data-gallery="")
+            img(src="img/msaken2013/9.jpg", alt="9" , height="100", width="120")
+
+          a(href="img/msaken2013/10.jpg", title="M'saken mini project 2013", data-gallery="")
+            img(src="img/msaken2013/10.jpg", alt="10" , height="100", width="120")
+
+          a(href="img/msaken2013/11.jpg", title="M'saken mini project 2013", data-gallery="")
+            img(src="img/msaken2013/11.jpg", alt="11" , height="100", width="120")
+
+          a(href="img/msaken2013/12.jpg", title="M'saken mini project 2013", data-gallery="")
+            img(src="img/msaken2013/12.jpg", alt="12" , height="100", width="120")  
+
+          a(href="img/msaken2013/13.jpg", title="M'saken mini project 2013", data-gallery="")
+            img(src="img/msaken2013/13.jpg", alt="13" , height="100", width="120")  
+
+          a(href="img/Monastir2013/14.jpg", title="M'saken mini project 2013", data-gallery="")
+            img(src="img/Monastir2013/14.jpg", alt="14" , height="100", width="120")  
+
+          a(href="img/msaken2013/15.jpg", title="M'saken mini project 2013", data-gallery="")
+            img(src="img/msaken2013/15.jpg", alt="15" , height="100", width="120")  
+
+          a(href="img/msaken2013/16.jpg", title="M'saken mini project 2013", data-gallery="")
+            img(src="img/msaken2013/16.jpg", alt="16" , height="100", width="120") 
+
+    // .contaier
+  // miniProjectM 2013 ends: description + gallery
 
   // ==========================================================================
   // Study trip 2013
